# beautiful-deception

./: .gitignore  ARXIV_SUBMISSION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  digest.py  hash.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: advanced_constructions.py  basic_usage.py
paper/: beautiful_deception.tex  random_oracles.tex  references.bib
src/random_oracles/: __init__.py  algorithms.py  demo.py  digest.py  extended_lazy.py  hash.py  operations.py  properties.py  visualize.py
tests/: test_digest.py  test_hash.py
