[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "random-oracles"
version = "0.1.0"
description = "A pedagogical exploration of cryptographic hash functions and random oracles through lazy evaluation"
authors = [
    {name = "Random Oracles Contributors", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "cryptography",
    "hash-functions", 
    "random-oracles",
    "lazy-evaluation",
    "codata",
    "education",
    "pedagogy"
]

[project.urls]
"Homepage" = "https://github.com/random_oracles"
"Documentation" = "https://github.com/random_oracles/blob/main/README.md"
"Source" = "https://github.com/random_oracles"
"Paper" = "https://github.com/random_oracles/blob/main/paper/random_oracles.pdf"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "mypy>=1.0",
    "ruff>=0.1.0"
]
viz = [
    "matplotlib>=3.5",
    "numpy>=1.20"
]
paper = [
    "jupyterlab>=3.0",
    "notebook>=6.0"
]

[project.scripts]
random-oracles-demo = "random_oracles.demo:main"
random-oracles-properties = "random_oracles.properties:run_all_properties"
random-oracles-visualize = "random_oracles.visualize:visualize_all"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Keep false for pedagogical flexibility

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=random_oracles --cov-report=html --cov-report=term"